# discretization-methods

./: .gitignore  README.md
solver/: CMakeLists.txt  README.md
solver/.ccls-cache/@@Users@dennyshuber@University@EUMaster4HPC@discretization-methods@solver/: @opt@homebrew@Cellar@boost@1.88.0@include@boost@assert@source_location.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@config.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@config@compiler@clang_version.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@config@detail@cxx_composite.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@config@detail@posix_features.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@config@detail@select_compiler_config.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@config@detail@suffix.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@config@platform@macos.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@config@user.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@container@detail@std_fwd.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@core@addressof.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@core@nvp.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@cstdint.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@detail@basic_pointerbuf.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@exception@exception.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@integer_traits.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@lexical_cast.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@lexical_cast@detail@buffer_view.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@lexical_cast@detail@converter_lexical.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@lexical_cast@detail@converter_numeric.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@lexical_cast@detail@lcast_basic_unlockedbuf.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@lexical_cast@try_lexical_convert.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@limits.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@math@constants@calculate_constants.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@math@constants@constants.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@math@cstdfloat@cstdfloat_iostream.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@math@policies@error_handling.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@math@special_functions@bernoulli.hpp.blob  @opt@homebrew@Cellar@boost@1.88.0@include@boost@math@special_functions@cos_pi.hpp.blob  (+89 more)
solver/include/: burger.h  common.h  diff.h  error.h  finite_diff.h  fourier.h  hyperbolic.h  integrate.h
solver/src/: main.cc
(+294 files in other folders)
